src/unit_tests/snapshots/stremio_core__unit_tests__snapshots__snapshot_notifications_bucket_empty.snap
---
source: src/unit_tests/snapshots.rs
expression: "NotificationsBucket::default()"
snapshot_kind: text
---
{
  "uid": null,
  "items": {},
  "lastUpdated": null,
  "created": "1970-01-01T00:00:00Z"
}
