src/unit_tests/snapshots/stremio_core__unit_tests__snapshots__snapshot_search_history_bucket_empty.snap
---
source: src/unit_tests/snapshots.rs
expression: "SearchHistoryBucket::default()"
snapshot_kind: text
---
{
  "uid": null,
  "items": {}
}
