src/unit_tests/snapshots/stremio_core__unit_tests__snapshots__snapshot_server_urls_bucket_empty.snap
---
source: src/unit_tests/snapshots.rs
expression: "ServerUrlsBucket::default()"
snapshot_kind: text
---
{
  "uid": null,
  "items": {}
}
